kubernetes/apps/network/envoy-gateway/config/external-auth.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external-auth
  labels:
    gateway-type: external
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 10.30.50.203
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: home-ops-jmn-tls
---
# # yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
# apiVersion: gateway.envoyproxy.io/v1alpha1
# kind: SecurityPolicy
# metadata:
#   name: envoy-external-auth
# spec:
#   targetRef:
#     group: gateway.networking.k8s.io
#     kind: Gateway
#     name: envoy-external-auth
#   oidc:
#     provider:
#       issuer: "https://sso.${SECRET_DOMAIN}/application/o/envoy-gateway/"
#       authorizationEndpoint: "https://sso.${SECRET_DOMAIN}/application/o/authorize/"
#       tokenEndpoint: "https://sso.${SECRET_DOMAIN}/application/o/token/"
#     clientID: "XUzfQuGJXOB4vzKRCGzHc4d3EqR1MgXaLr8DfRRl"
#     clientSecret:
#       name: authentik-oidc-secret
#     redirectURL: "https://ingress-ext-auth.${SECRET_DOMAIN}/oauth2/callback"
#     logoutPath: "/oauth2/logout"
#     scopes:
#       - openid
#       - profile
#       - email
# ---
